...

            let action = UIAlertAction(title: result.buttonText, style: .default) { [weak self] _ in
                guard let self = self else { return }

                self.presenter.restartGame()
            }
            action.accessibilityIdentifier = "playAgainButton" // Добавляем идентификатор кнопки
            alert.addAction(action)

            self.present(alert, animated: true, completion: nil)
        }
    func highlightImageBorder(isCorrectAnswer: Bool) {
        imageView.layer.masksToBounds = true
...
