//import XCTest
//
//final class MovieQuizUITests: XCTestCase {
//
//    var app: XCUIApplication!
//        
//    override func setUpWithError() throws {
//        try super.setUpWithError()
//        app = XCUIApplication()
//        app.launch()
//        continueAfterFailure = false
//    }
//
//    override func tearDownWithError() throws {
//        try super.tearDownWithError()
//        app.terminate()
//        app = nil
//    }
//
//    func testYesButton() {
//        sleep(3)
//        
//        let firstPoster = app.images["Poster"]
//        let firstPosterData = firstPoster.screenshot().pngRepresentation
//        
//        app.buttons["Yes"].tap()
//
//        sleep(3)
//        
//        let secondPoster = app.images["Poster"]
//        let secondPosterData = secondPoster.screenshot().pngRepresentation
//        
//        XCTAssertNotEqual(firstPosterData, secondPosterData)
//    }
//    
//    func testNoButton() {
//        sleep(3)
//        
//        let firstPoster = app.images["Poster"]
//        let firstPosterData = firstPoster.screenshot().pngRepresentation
//        
//        app.buttons["No"].tap()
//        
//        sleep(3)
//        
//        let secondPoster = app.images["Poster"]
//        let secondPosterData = secondPoster.screenshot().pngRepresentation
//        
//        let indexLabel = app.staticTexts["Index"]
//        
//        XCTAssertNotEqual(firstPoster, secondPoster)
//        XCTAssertEqual(indexLabel.label, "2/10")
//    }
//    
//    func testGameFinish() {
//        sleep(2)
//        for _ in 1...10 {
//            app.buttons["No"].tap()
//            sleep(2)
//        }
//
//        let playAgainButton = app.buttons["playAgainButton"]
//        
//        XCTAssertTrue(playAgainButton.waitForExistence(timeout: 5), "The alert did not appear in time")
//        XCTAssertTrue(playAgainButton.label == "Сыграть ещё раз")
//    }
//
//    func testAlertDismiss() {
//        sleep(2)
//        for _ in 1...10 {
//            app.buttons["No"].tap()
//            sleep(2)
//        }
//        
//        let playAgainButton = app.buttons["playAgainButton"]
//        XCTAssertTrue(playAgainButton.waitForExistence(timeout: 5), "The alert did not appear in time")
//        playAgainButton.tap()
//        
//        sleep(2)
//        
//        let indexLabel = app.staticTexts["Index"]
//        
//        XCTAssertFalse(playAgainButton.exists)
//        XCTAssertTrue(indexLabel.label == "1/10")
//    }
//}
